# modi-harness

./: .env.example  .gitignore  .gitmodules  CHANGELOG.md  README.md  modi.toml  pyproject.toml
agents/: __init__.py
agents/research_assistant/: DESIGN.md  README.md  __init__.py  agent.md  agent.py  agent.toml  brain.md  brain.toml  confidence.py  intent.toml  long_task.py  loop.toml  rules.toml  runtime.py  stages.toml  validators.py
docs/: README.md  agent-discovery-and-task-protocol.md  builtins.md  changelog.md  claude_code_system_prompt_原文.md  cli.md  development-plan.md  modi_harness_arch_v0.md  plugins.md  table_of_contents.md  types-reference.md
docs/agents/: README.md
docs/architecture/: 00-core-concepts.md  01-agent-loader.md  02-skill-loader.md  03-context-manager.md  04-runtime-adapter.md  04b-session.md  05-tool-gateway.md  06-policy-gate.md  07-workspace-manager.md  08-harness-api.md  09-model-adapter.md  10-output-controller.md  11-trace-recorder.md  12-memory-store.md  13-hook-system.md  14-permission-mode.md  15-untrusted-content.md  16-subagent-runtime.md  17-checkpointer.md  18-cache-optimizations.md  README.md  agent-and-skill.md  context-and-memory.md  execution-runtime.md  output-and-hooks.md  permissions.md  research-assistant.md  tools-and-policy.md  workspace-and-trace.md
docs/design/: deep-search.md
docs/guides/: README.md  agents.md  builtin-tools.md  cli.md  plugins.md
docs/implement/: 00-project-foundation.md  01-agent-loader.md  02-skill-loader.md  03-context-manager.md  04-runtime-adapter.md  05-tool-gateway.md  06-policy-gate.md  07-workspace-manager.md  08-harness-api.md  09-model-adapter.md  10-output-controller.md  11-trace-recorder.md  12-langchain-langgraph-integration.md  13-evaluation-and-quality.md  14-memory-store.md  15-hook-system.md  README.md
docs/project/: first-principles.md  positioning.md  versioning.md
docs/reference/: README.md  doubaosousuo.md  types.md
docs/reviews/: research_agent_optimization.md  selfcheck-v0.6-result.md  selfcheck-v0.6.md
docs/scenarios/: README.md
docs/superpowers/: README.md
examples/: README.md
examples/code_auditor/: README.md  run.py
examples/research_assistant/: README.md  run.py
tests/: test_harness.py  test_mode_alias.py  test_smoke.py  test_smoke_scenarios.py  test_types.py  test_version.py
tests/cli/: __init__.py  (+7 more)
(+412 files in other folders)
