[project]
name = "modi-harness"
version = "0.7.1"
description = "Runtime for autonomous agents aligned with human intent"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Modi Harness Contributors" }]
keywords = [
    "agent",
    "harness",
    "human-centered",
    "human-aligned",
    "governance",
    "langchain",
    "langgraph",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "langchain>=1.0",
    "langgraph>=1.0",
    "langgraph-checkpoint-sqlite>=2.0",
    "langchain-openai>=1.0",
    "langchain-anthropic>=0.3",
    "pydantic>=2.7,<3",
    "pydantic-settings>=2.4,<3",
    "python-dotenv>=1.0,<2",
    "pyyaml>=6.0,<7",
    "jsonschema>=4.22,<5",
    "python-ulid>=2.7,<4",
    "rich>=13.7",
    "prompt-toolkit>=3.0,<4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2,<9",
    "pytest-asyncio>=0.23,<1",
    "pytest-cov>=5.0,<6",
    "ruff>=0.6,<1",
    "mypy>=1.10,<2",
]

[project.scripts]
modi = "modi_harness.__main__:main"

# Plugin authors: register plugins via entry points group "modi_harness.plugins"
# See docs/guides/plugins.md for the author guide

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/modi_harness"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra --strict-markers"
markers = [
    "smoke: end-to-end smoke scenarios (M6)",
    "slow: tests that take noticeable time",
    "live_model: requires OPENAI_API_KEY and network",
]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "F", "W",  # pycodestyle / pyflakes
    "I",            # isort
    "B",            # bugbear
    "UP",           # pyupgrade
    "RUF",          # ruff-specific
]
ignore = ["E501"]   # handled by formatter

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["modi_harness"]
mypy_path = "src"
namespace_packages = true
explicit_package_bases = true
